Market map tab updates

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,8 @@
   --color-button: #BDFF67;
   --color-green-slate-1: #223634;
   --color-green-slate-2: #234b48;
+  --color-green-slate-3: #2c6763;
+
 }
 
 .bg-gradient-main {
